file upload option 1 complete

--- a/client/src/app/modules/shared/file-upload/file-upload.component.html
+++ b/client/src/app/modules/shared/file-upload/file-upload.component.html
@@ -14,7 +14,7 @@
 			(change)="fileBrowseHandler($any($event.target).files)" />
 			
 			<label class="mat-elevation-z4"
-				matTooltip="Hold down Ctrl key to select individual files, or press Shift key to select a range of files"
+				matTooltip="Hold Ctrl key to select individual files, or press Shift key to select a range of files"
       	for="fileDropRef">
         Attach file(s)<mat-icon>attach_file</mat-icon>
 			</label>
