file upload complete

--- a/client/src/app/modules/shared/file-upload/file-upload.component.html
+++ b/client/src/app/modules/shared/file-upload/file-upload.component.html
@@ -21,4 +21,10 @@
 		<mat-icon>attach_file</mat-icon>
 	</button>
 
+<!-- file upload progress bar -->
+	<div class="progress">
+		<mat-progress-bar class="progress-bar" mode="determinate" [value]="uploadProgress" *ngIf="uploadProgress"></mat-progress-bar>
+		<mat-icon (click)="cancelUpload()" *ngIf="uploadProgress">delete_forever</mat-icon>
+	</div>
 </div>
+
