created file upload documentation

--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -1,3 +1,5 @@
-<p class="mat-h2">Welcome to Angular Feature Test!</p>
-
-<div>This app is used for testing Angular features.</div>
+<markdown
+	mermaid
+	src="../../../assets/markdown/home/home.md"
+>
+</markdown>
