--- a/client/src/app/components/top-bar/top-bar.component.html
+++ b/client/src/app/components/top-bar/top-bar.component.html
@@ -3,7 +3,7 @@
 		<mat-icon [matMenuTriggerFor]="appMenu" class=""mat-elevation-z2>menu</mat-icon>
 	</div>
 
-	<div>Angular Feature Test</div>
+	<div>Angular + Node.js with TypeScript</div>
 
 	<div>
 		<mat-icon [routerLink]="['/help']" class="mat-elevation-z2">help</mat-icon>
